--- a/app/src/main/res/layout-land/activity_game_screen.xml
+++ b/app/src/main/res/layout-land/activity_game_screen.xml
@@ -172,7 +172,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="250dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
 
